--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,10 @@ jobs:
     - uses: actions/checkout@v2
     - uses: mougenko/asciidoc-to-html@8af31f22e90187ac7724b3529ae3f1044c6fab55
       with:
-        src: src
-        dest: dest
+        src: .
+        dest: .
     - name: check
       run: |
+        ls -la
         ls -la src
         ls -la dest
